# measurable

./: .gitignore  LICENSE  README.md  cabal.config  measurable.cabal
examples/: CRP.hs
src/: Examples.hs  Measurable.hs
src/Examples/: ChineseRestaurantProcess.hs
src/Measurable/: Core.hs  Generic.hs  Measures.hs  Util.hs
tests/: Test.hs
