name:                measurable
version:             1.0.0.0
license:             BSD3
license-file:        LICENSE
copyright:           (c) Jared Tobin 2013 - 2014.
author:              Jared Tobin
maintainer:          jared@jtobin.ca
stability:           Experimental
category:            Math
homepage:            http://github.com/jtobin/measurable
bug-reports:         http://github.com/jtobin/measurable/issues
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Basic measure wrangling.
description:
  Various types, instances, and combinators that make it easy to play with
  measures.

source-repository head
  type: git
  location: git://github.com/jtobin/measurable.git

library
  exposed-modules:  Measurable.Core
  hs-source-dirs:   src
  default-language: Haskell2010

  other-extensions:
    BangPatterns
    FlexibleInstances

  build-depends:
      base >= 4.7 && < 4.8
    , foldl
    , integration
    , mtl
    , statistics
    , transformers

Test-suite measurable-examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, examples
  main-is:             CRP.hs
  default-language:    Haskell2010
  ghc-options:
    -threaded -rtsopts
  build-depends:
      base >= 4.7 && < 4.8
    , containers
    , foldl
    , integration
    , lens
    , measurable
    , mtl
    , mwc-random
    , primitive
    , statistics
    , transformers

